# EqualisVote

./: README.md
benchmark/: averageRuntimes.py  benchmark_elections.js  benchmark_user.js  formatElection.py  formatOriginalVSModified.py  formatResultsSim.py  formatResultsSim_2.py  json_to_csv.py  package-lock.json  package.json
benchmark/playwright-report/: index.html
benchmark/tests/: electionFlow.spec.js  joinGroupFlow.spec.js
elections-server/: package-lock.json  package.json  server.js
elections-server/binaries/: create_election.js  create_election.wasm  crypto.js  shuffle_user.js  shuffle_user.wasm
nyx/: app.js  index.html  package-lock.json  package.json  simulateClients.js  simulateElection.js  simulateME.js  simulateMU.js  simulateNClients.js
nyx/binaries/: create_user.js  create_user.wasm  crypto.wasm  encrypt_vote.js  encrypt_vote.wasm  gen_group_tag.js  gen_group_tag.wasm  group_init_exp.js  group_init_exp.wasm  intersection.js  intersection.wasm
nyx/src/: App.css  App.jsx  main.jsx
nyx/src/backend/: WebSocketProvider.jsx  wasmAPI.js
nyx/src/components/: Election.jsx  Group.jsx  Notification.jsx  QuickActions.jsx  Sidebar.jsx  User.jsx
nyx/src/components/modals/: CreateElectionModal.jsx  CreateGroupModal.jsx  ElectionVoteModal.jsx  JoinGroupModal.jsx  VoteModal.jsx
nyx/src/context/: PrivateRoute.jsx  UserContext.jsx
nyx/src/pages/: ElectionPage.jsx  Elections.jsx  GroupPage.jsx  Groups.jsx  Home.jsx  Notifications.jsx  Profile.jsx
protocol - COLBAC/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  run.sh
protocol - COLBAC/src/: parties.cpp  parties.hpp  protocol_run.cpp  protocol_run_colbac.cpp  protocol_run_colbac.hpp  repeated_sigma_protocol.cpp  utilities.cpp  utilities.hpp  verifiable_exponentiation.cpp  verifiable_exponentiation.hpp
protocol - COLBAC/src/modules/: ShuffleJNI.cpp  ShuffleResult.hpp  create_election_js.cpp  create_group_jni.cpp  create_user_js.cpp  crypto_wasm.cpp  derive_shared_secret.cpp  encrypt_vote_js.cpp  gen_group_tag_js.cpp  group_init_exp_js.cpp  init_count_jni.cpp  init_count_jni.hpp  intersection_server_js.cpp  shuffle_server.cpp  shuffle_user_js.cpp  test_emscript.cpp
protocol - COLBAC/wasm/: CMakeLists.txt  Dockerfile
server/: pom.xml
server/src/main/binaries/: create_group  init_shuffle_server  w_s_shuffling
server/src/main/java/com/example/: AppContextListener.java  CryptoNative.java  DeadlineChecker.java  GroupNative.java  HmacUtils.java  RistrettoDH.java  ServerKeyManager.java
server/src/main/java/com/example/db/: DBClient.java  InMemoryManager.java  NewManager.java
server/src/main/java/com/example/models/: Election.java  ElectionDTO.java  Group.java  GroupDTO.java  Intersection.java  ShuffleResult.java  User.java  UserDTO.java
server/src/main/java/com/example/notifications/: ElectionNotification.java  GroupInviteNotification.java  Notification.java  TagListNotification.java
server/src/main/java/com/example/servlets/: ConfirmGroupServlet.java  CreateElectionServlet.java
